# promptstagram

backend/: .gitignore  Cargo.toml  reset.sh
backend/migrations/: 0_prompts.sql
backend/src/: db.rs  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  prompts.rs
